# cs48000_assignments

./: .env.example  IMPLEMENTATION_GUIDE.md  README.md  config.py  jest.config.js  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: app.js.html  config.js.html  dataIngestion.js.html  db.js.html  index.html  models.js.html  reporting.js.html  routes.js.html  validation.js.html
data/sources/production_logs/: sample_production.csv
data/sources/quality_logs/: sample_quality.csv
data/sources/shipping_logs/: sample_shipping.csv
db/: seed.js  setup.js
docs/: architecture_decision_records.md
src/: app.js  config.js  dataIngestion.js  db.js  models.js  reporting.js  routes.js  server.js  validation.js
src/data_access/: __init__.py  base.py  data_integrity_access.py  data_source_metadata_access.py  file_ingestion_adapter.py  production_data_access.py  quality_data_access.py  shipping_data_access.py
src/models/: data_integrity_flag.py  data_source.py  lot.py  production_record.py  quality_record.py  shipping_record.py
src/presentation/: dashboard.py  widgets.py
src/services/: conflict_resolution_service.py  data_integration_service.py  data_normalization_service.py  integrated_view_service.py  validation_service.py
tests/: integration.test.js
tests/unit/data_access/: test_data_integrity_access.py  test_data_source_metadata_access.py  test_file_ingestion_adapter.py  test_production_data_access.py  test_quality_data_access.py  (+1 more)
(+5 files in other folders)
